# batch_manager

./: README.md  pyproject.toml
batch_manager/: config.ini.example  main.css  main.py
